[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
[project]
name = "andreani_aa_tools"
version = "0.0.13"
authors = [
  "Ignacio Belogi <ibelogi@andreani.com>",
  "Gabriel Aranda <garanda@andreani.com>",
  "Mariana Liu <mliu@andreani.com>",
  "Yasmin Ojeda <yojeda@andreani.com>",
  "Ariel Fleiderman <afleiderman@andreani.com>",
  "Daiana Alonso <dalonso@andreani.com>",
  "Facundo Silvestre <fsilvestre@andreani.com>",
  "Santiago Bergman <sbergman@andreani.com>",
  "Matías Moyano <matmoyano@andreani.com>",
  "Giuliana Vera <gvera@andreani.com>",
  "Eloy Chang <echang@andreani.com>",
  "Ezequiel Brodschi <ebrodschi@andreani.com>",
  "Sol Cari <scari@andreani.com>",
]
description = "Common functions and protocols used by the Andreani Advanced Analytics team"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eloychang/andreani_aa_tools"
"Bug Tracker" = "https://github.com/eloychang/andreani_aa_tools/issues"
